# opendc-api-spec.yml
@@ -550,7 +550,7 @@ paths:
     /schedulers:
         get:
             tags:
-                - experiments
+                - simulation
             description: Get all available Schedulers
             responses:
                 '200':
@@ -564,7 +564,7 @@ paths:
     /traces:
         get:
             tags:
-                - experiments
+                - simulation
             description: Get all available Traces (non-populated).
             responses:
                 '200':
@@ -583,7 +583,7 @@ paths:
     '/traces/{traceId}':
         get:
             tags:
-                - experiments
+                - simulation
             description: Get this Trace.
             parameters:
                 -   name: traceId
@@ -703,22 +703,6 @@ paths:
                     description: Prefab not found.
 
 definitions:
-    MachineState:
-        type: object
-        properties:
-            _id:
-                type: string
-            machineId:
-                type: string
-            experimentId:
-                type: string
-            tick:
-                type: integer
-            inUseMemoryMb:
-                type: integer
-            loadFraction:
-                type: number
-                format: float
     Prefab:
         type: object
         properties:
@@ -732,38 +716,6 @@ definitions:
             datetimeLastEdited:
                 type: string
                 format: dateTime
-    RackState:
-        type: object
-        properties:
-            _id:
-                type: string
-            rackId:
-                type: string
-            experimentId:
-                type: string
-            tick:
-                type: integer
-            inUseMemoryMb:
-                type: integer
-            loadFraction:
-                type: number
-                format: float
-    RoomState:
-        type: object
-        properties:
-            _id:
-                type: string
-            roomId:
-                type: string
-            experimentId:
-                type: string
-            tick:
-                type: integer
-            inUseMemoryMb:
-                type: integer
-            loadFraction:
-                type: number
-                format: float
     Scheduler:
         type: object
         properties:
@@ -786,7 +738,7 @@ definitions:
                 type: array
                 items:
                     type: string
-            experimentIds:
+            portfolioIds:
                 type: array
                 items:
                     type: string
@@ -885,8 +837,6 @@ definitions:
             projectId:
                 type: string
             name:
-                type: string
-            type:
                 type: string
             scenarioIds:
                 type: array
